Requiring more Entitlements to check for Connectors and / or Resources